res/css/default.css
:root {
    --background-color: white;
    --text-colour: #333333;
    --link-color: rgb(0, 125, 151);
    --visited-link-color: rgb(125, 49, 134);
  }

@media (prefers-color-scheme: dark) {
  :root {
    --background-color: #121212;
    --text: white;
    --link-color: rgb(0, 67, 98);;
    --visited-link-color: rgb(76, 0, 85);
  }
}

* {
    font-family: Helvetica, Verdana, Arial, sans-serif;
    letter-spacing: 0.02em;
}

body {
    text-align: left;
    margin: 0px;
    background-color: var(--background-color);
    color: var(--text-color);
}

header.name {
    padding-top: 1em;
    padding-bottom: 1em;
    text-align: center;
    font-size: 3em;
}

p {
    margin-left: 1em;
    margin-right: 1em;
    font-size: 1.5em;
}

p.centered {
    text-align: center;
}

a {
    /*border for fancy underline*/
    border-style: hidden hidden solid hidden;
    border-color: var(--link-color);

    /*remove original underline*/
    text-decoration: none;
    color: var(--text-color)
}

a:visited {
    border-color: var(--visited-link-color);
}

a.img {
    border-style: hidden;
}

img.centered {
    vertical-align: middle;
}

img.avatar {
    vertical-align: middle;
    width: 5%;
    border-radius: 50%;
}

